--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
     
                 <div class="link">
                     <span id="quest">ALREADY HAVE AN ACCOUNT? </span>
-                    <a id="link_quest" href="file:///C:/Users/QSR/Desktop/project/signin.html">SIGN IN</a>
+                    <a id="link_quest" href="signin.html">SIGN IN</a>
                 </div>
     
                 <div>
