--- a/signin.html
+++ b/signin.html
@@ -25,7 +25,7 @@
 
                 <div class="link">
                     <span id="quest">NEW IN HERE?</span>
-                    <a id="link_quest" href="file:///C:/Users/QSR/Desktop/project/login.html#">CREATE ACCOUNT</a>
+                    <a id="link_quest" href="login.html">CREATE ACCOUNT</a>
                 </div>
             </div>
         </div>
